# kaldi-cmake

./: .gitignore  CMakeLists.txt  kaldi-cmake.py  kaldi-cmake.pyproj  kaldi-cmake.sln  proj_kaldi.bat  proj_kaldi.sh
cmake/: CMakeInit.cmake  FindGTest.cmake  FindIPP.cmake  FindMKL.cmake  FindMKLM.cmake  FindMKLM_11.cmake  FindMKL_11.cmake  FindStcAsrSdk.cmake  FindStcTts.cmake  Findlog4cxx.cmake  MemcheckTest.cmake  Version.rc.in
modified/featbin/: copy-feats.cc
patched/include/base/: kaldi-math.h
patched/src/featbin/: process-kaldi-pitch-feats.cc
patched/test/util/: hash-list-test.cc
patched_linux/src/decoder/: lattice-simple-decoder.cc
patched_windows/src/feat/: pitch-functions.cc
patched_windows/src/featbin/: compute-kaldi-pitch-feats.cc
patched_windows/src/ivectorbin/: compute-eer.cc
patched_windows/src/matrix/: kaldi-matrix.cc
scripts/: install_ofst.sh
stc/stcbin/: ali-to-segm.cc
